# oke-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README  README.md  commands.txt  config_store.py  main.py  oci_auth.py  oke_auth.py  pyproject.toml  pyvenv.cfg  requirements.txt
handlers/: oke.py  traffic.py
oke_mcp_server/: auth.py  config.py  config.yaml.example  main.py  oke_auth.py
oke_mcp_server/tools/: events.py  k8s.py  metrics.py  oke.py  oke_cluster.py
